[package]
name = "cacao"
description = "Rust bindings for AppKit (macOS/Airyx/GNUStep, beta) and UIKit (iOS/tvOS, alpha)."
version = "0.4.0-beta2"
edition = "2018"
authors = ["Ryan McGrath <ryan@rymc.io>"]
build = "build.rs"
repository = "https://github.com/ryanmcgrath/cacao"
categories = ["gui", "os::macos-apis", "os::ios-apis"]
keywords = ["gui", "macos", "ios", "appkit", "uikit"]
license = "MIT OR MPL-2.0+"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-apple-darwin"
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitmask-enum = "2.2.1"
objc = { version = "=0.3.0-beta.2", package = "objc2" }
block = { version = "=0.2.0-alpha.6", package = "block2" }
dispatch = "0.2.0"
infer = { version = "0.15", optional = true }
lazy_static = "1.4.0"
libc = "0.2"
os_info = "3.0.1"
url = "2.1.1"
uuid = { version = "1.1", features = ["v4"], optional = true }

[dev-dependencies]
eval = "0.4"
core-graphics = "0.23"
foreign-types = "0.5"

[features]
appkit = []
uikit = []
autolayout = []
default = ["appkit", "autolayout"]
cloudkit = []
color_fallbacks = []
quicklook = []
user-notifications = ["uuid"]
webview = ["infer"]
webview-downloading-macos = []

[package.metadata.bundle.example.ios-beta]
name = "ios-beta"
identifier = "com.cacao.ios-test"
category = "Developer Tool"
short_description = "An example Cacao iOS app."
long_description = "An example Cacao iOS app."

[[example]]
name = "webview_custom_protocol"
required-features = ["webview"]

[[example]]
name = "browser"
required-features = ["webview"]

[[example]]
name = "ios-beta"
required-features = ["uikit", "autolayout"]

[[example]]
name = "calculator"
required-features = ["appkit"]
[[example]]
name = "todos_list"
required-features = ["appkit"]
[[example]]
name = "animation"
required-features = ["appkit"]
[[example]]
name = "autolayout"
required-features = ["appkit"]
[[example]]
name = "custom_image_drawing"
required-features = ["appkit"]
[[example]]
name = "text_input"
required-features = ["appkit"]
[[example]]
name = "defaults"
required-features = ["appkit"]
[[example]]
name = "frame_layout"
required-features = ["appkit"]
[[example]]
name = "window"
required-features = ["appkit"]
[[example]]
name = "window_delegate"
required-features = ["appkit"]
[[example]]
name = "window_controller"
required-features = ["appkit"]
[[example]]
name = "safe_area"
required-features = ["appkit"]
[[example]]
name = "popover"
required-features = ["appkit"]
