[package]
name = "appkit-derive"
description = "A crate containing macros for appkit."
version = "0.1.0"
authors = ["Ryan McGrath <ryan@rymc.io>"]
edition = "2018"
license = "MPL-2.0+"
repository = "https://github.com/ryanmcgrath/appkit-rs"
categories = ["gui", "rendering::engine", "multimedia"]
keywords = ["gui", "ui"]

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
