[package]
name = "appkit"
version = "0.1.0"
authors = ["Ryan McGrath <ryan@rymc.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
block = "0.1.6"
dispatch = "0.2.0"
libc = "0.2"
objc = "0.2.7"
objc_id = "0.1.1"
#uuid = { version = "0.8", features = ["v4"] }
url = "2.1.1"

[features]
cloudkit = []
user-notifications = []
enable-webview-downloading = []
